# StencilCL

./: CMakeLists.txt  CMakePresets.json  kernel.cl  main.c  main.cc  main.cpp
src/: CMakeLists.txt  Stencil1d.cpp  VectorAdd.cl  VectorAdd.cpp
